--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     list-style: none;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'PT Serif', serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 body{
   background-color: #fffffc;
@@ -99,7 +99,6 @@ body{
   font-weight: 600;
   font-size: 18px;
   outline: none;
-  font-family: 'Bitter', serif;
 }
 
 .nav-menu .menu-active,
@@ -237,7 +236,6 @@ body{
       font-weight: 600;
       font-size: 16px;
       outline: none;
-      font-family: 'Bitter', serif;
     }
 
   .men .menu-active,
