--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ body{
   display: none;
 }
 .men .dropdown-content a{
-  padding: 15px 15px 15px 33px;
+  padding: 7px 15px 7px 33px;
   font-size: 13px;
 }
 .men .dropdown-content .maintitle{
@@ -183,7 +183,7 @@ body{
   outline: none;
   font-family: 'Bitter', serif;  
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 810px) {
     .nshow{
       display: none;
     }
@@ -229,7 +229,7 @@ body{
         display: block;
     }
     .men a{
-      padding: 0px 15px 15px 15px;
+      padding: 7px 15px 7px 15px;
       text-decoration: none;
       display: block;
       color: #000000;
@@ -611,8 +611,8 @@ body{
     height: 40px;
   }
   .ourbusiness .parag {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 2px;
+    padding-right: 2px;
     font-size: 15px;
   }
   .pagetitlebg .centered{
@@ -736,7 +736,6 @@ body{
 .flowchart .sub-title{
   font-size: 24px;
   color: #ffffff;
-  font-family: 'Bitter', serif;
   padding-left: 5%;
   width: 100%;
   padding-right: 10%;
@@ -959,8 +958,11 @@ body{
 }
 @media screen and (max-width: 1200px) {
   .containermain  .card {
-      height: 480px;
+      height: 450px;
       margin:10px;
+  }
+  .containermain .card .rmcont{
+    padding-top: 5px;
   }
   .containermain .card .title{
     height: 70px;
@@ -1011,14 +1013,6 @@ body{
   }
   .containermain .card .rmcont a{
     font-size: 15px;
-  }
-}
-@media screen and (max-width: 390px){
-  .containermain  .card {
-      height: 310px;
-  }
-  .containermain .card .rmcont{
-    padding-top: 100px;
   }
 }
 @media screen and (max-width: 380px){
@@ -1222,11 +1216,12 @@ body{
 .mapview{
   padding: 20px;
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width: 825px){
   .contactuscontainer{
     font-size: 13px;
     flex-direction: column;
     align-items: center;
+    padding-bottom:  0px;
   }
   .contactuscontainer .contactform{
     width: 90%;
@@ -1245,7 +1240,7 @@ body{
     font-size: 15px;
   }
 }
-@media screen and (max-width: 335px){
+@media screen and (max-width: 345px){
   .contactuscontainer .contactaddress{
     padding: 20px 0 0;
   }
@@ -1405,7 +1400,7 @@ body{
     float: none;
   }
 }
-@media screen and (max-width: 376px){
+@media screen and (max-width: 380px){
   .quickfooter{
     font-size: 13px;
   }
@@ -1416,7 +1411,7 @@ body{
     font-size: 10px;
   }
 }
-@media screen and (max-width: 390px){
+@media screen and (max-width: 405px){
   .quickfooter .quickaddress .contentaddress{
     padding: 10px 0 10px 0; 
   }
@@ -1460,6 +1455,7 @@ body{
   width: 26%;
   min-width: 340px;
   display: block;
+  padding-bottom: 40px;
 }
 .sidebar-content .maintitle{
   padding-bottom: 20px;
